# CalRatioTrainer

./: .gitignore  .gitmodules  README.md  coverage.xml  divert_analysis_ntuple.root  pyproject.toml  temp_stateful.keras  temp_stateless.keras
.github/workflows/: ci.yaml
cal_ratio_trainer/: config.py  default_analyze_config.yaml  default_build_main_training_config.yaml  default_convert_config.yaml  default_divert_config.yaml  default_reporting_config.yaml  default_score_pickle_config.yaml  default_training_config.yaml  default_xaod_config.yaml  trainer.py  utils.py
cal_ratio_trainer/common/: __init__.py  column_names.py  evaluation.py  evaulation.py  file_lock.py  fileio.py  trained_model.py
cal_ratio_trainer/convert/: convert_divert.py  convert_json.py  convert_xaod.py  resample.py
cal_ratio_trainer/reporting/: analyze.py  dump.py  evaluation_utils.py  md_report.py  training_file.py
cal_ratio_trainer/score/: score_pickle.py
cal_ratio_trainer/training/: deepJet_train_keras.py  evaluate_training.py  runner_utils.py  training_utils.py  utils.py
cal_ratio_trainer/training/model_input/: jet_input.py  model_input.py
tests/: test_config.py  test_config.yaml  test_training_utils.py  test_utils.py  test_with_file_url.yaml
tests/build_training/: test_build_main.py
tests/common/: test_file_lock.py  test_fileio.py  test_trained_model.py
tests/convert/: test_convert_divert.py  test_convert_xaod.py
tests/data/: bib.pkl  bib.root  bib_25563461_slice_error.root  empty_divert_analysis_file.root  felix_control_region.pkl  one_length_file.pkl  sample_divert_convert.yaml  short_divert_analysis_file.root  sig_311314_bad_object_small.root  sig_311421_600_50.pkl  sig_311424_600_275.pkl
tests/data/train_results/keras/: final_model_weights_1.keras
tests/data/training_results/default/00001/keras/: final_model.keras
tests/reporting/: test_analyze.py
tests/training/: test_runner_utils.py  test_utils.py
